Fix hero link wrapping

--- a/src/styles/heroes.scss
+++ b/src/styles/heroes.scss
@@ -22,6 +22,7 @@
   }
 
   &-link {
+    display: block;
     color: #fff;
     text-decoration: none;
   }
